# qwen-tts-ui

./: .gitignore  README.md  generate_wan_video_direct.py  pyproject.toml  qwen_tts_ui.py
ui/: __init__.py  main_window.py
workers/: __init__.py  generate_audio_worker.py  generate_video_worker.py  transcribe_worker.py
