[project]
name = "qwen-tts-ui"
version = "0.1.0"
description = "PyQt6 UI for Qwen TTS voice cloning"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6.0",
    "torch>=2.0.0",
    "soundfile>=0.12.0",
    "openai-whisper>=20231117",
    "qwen-tts>=0.0.5",
]

[project.scripts]
tts-ui = "qwen_tts_ui:main"
